Made common styles sheet for all the pages hence modified the pages accordingly

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,10 +9,11 @@ h1,
 h3,
 h4{
     font-weight: bold;
+    font-size: 22px;
 }
 
 a {
-    color:rgb(0, 0, 0);
+    color:rgb(229,39,79);
     font-weight: 500;
 }
 
